完成项目中止操作

--- a/src/main/resources/1.html
+++ b/src/main/resources/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>HanppyRoom</title>
     <script>
-        var url = "ws://localhost:8080/room/";
+        var url = "ws://localhost:8080/";
         
         var ws = null;
         //加入聊天室
